--- a/main.css
+++ b/main.css
@@ -1,43 +1,210 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    text-align: center;
-  }
-  
-  button {
-    margin-top: 20px;
-  }
-  
-  .contact {
-    height: 50px;
-    margin-right: 30px;
+  box-sizing: border-box;
+}
+
+body {
+  margin-left: 30px;
+  margin-right: 30px;
+  text-align: center;
+}
+
+h1, h2, h3 {
+  font-family: gotu;
+  border-radius: 15px;
+}
+
+p {
+  font-family: montserrat;
+}
+
+.dropdown {
+  text-align: left;
+  position: relative;
+  display: inline;
+  height: 60px;
+  width: 100%;
+  background-color: #ffdef6;
+}
+
+.hamburger {
+  color: #230fa3;
+  padding-left: 5px;
+}
+
+.hamburger:hover {
+  cursor: pointer;
+}
+
+.menu {
+  display: none;
+  position: absolute;
+  min-width: 150px;
+}
+
+
+.menuitems a {
+  text-decoration: none;
+  font-family: montserrat;
+  padding: 5px;
+  padding-bottom: 10px;
+  display: block;
+  color: #230fa3;
+}
+
+.dropdown:hover .menu {
+  display: block;
+  text-align: left;
+}
+
+.menuitems a:hover {
+  display: block;
+  background-color: #fce1f586;
+}
+
+header {
+  text-align: center;
+}
+
+.profilepic {
+  height: 50vh;
+}
+
+.graphic {
+  display: none;
+}
+
+h1, h2 {
+  background-image: linear-gradient(#7815ce, #fa85d8);
+  color: #ffffff;
+}
+h3, p {
+  color: #230fa3
+}
+
+a {
+  text-decoration: none;
+}
+
+.exampleimage {
+  width: 80vw;
+  border: 2px solid #53b2f9;
+  border-radius: 100%;
+  margin-bottom: 50px;
+}
+
+footer img {
+  height: 40px;
+}
+
+footer {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-shrink: 1;
+  flex-grow: 1;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 520px) {
+
+  .example {
     display: inline-block;
-    background-color: #e3e3e3;
-    padding: 10px;
+    width: 40vw;
   }
-  
-  .imagecontainer {
-    border: 1px solid #000000;
-    width: 95%;
-    height: 300px;
-    background-color: #e3e3e3
+
+  .exampleimage {
+    width: 35vw;
+    height: 35vw;
   }
+
+}
+
+@media screen and (min-width: 1280px) {
+
+  .hamburger {
+    display: none;
+  }
+
+  .dropdown {
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    background-color: #fce1f586;
+  }
+
+  .menu {
+    display: inline-block;    
+  }
+
+  .menuitems {
+    display: flex;
+    flex-direction: row;
+    padding-top: 15px;
+    padding-left: 30px;
+  }
+
+  .graphic {
+    display: inline;
+    height: 25vw;
+  }
+
+.leftimage {
+  float: left;
+}
+
+.rightimage {
+  float: right;
+}
   
-  @media screen and (min-width: 1280px) {
-  
-  .aboutme {
-    display: inline-block;
-    width: 30%;
-    margin-right: 100px;
+  .profilepic {
+    width: 25vw;
+    height: 25vw;
+  }
+
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .bio {
+    width: 25vw;
     vertical-align: top;
+    text-align: left;
   }
-  
-  .mywork {
+
+  .work {
+    width: 60vw;
+  }
+
+  .work h2 {
+    width: 30vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .example {
     display: inline-block;
-    width: 30%;
-    margin-left: 100px;
+    width: 25vw;
   }
-  
+
+  .exampleimage {
+    width: 20vw;
+    height: 20vw;
   }
+
+  footer {
+    width: 50vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
