--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,11 +1,12 @@
+/* Place base html styles here */
 * {
   box-sizing: border-box;
 }
 
 body {
-  margin-left: 30px;
-  margin-right: 30px;
   text-align: center;
+  padding: 0px;
+  margin: 0px;
 }
 
 h1, h2, h3 {
@@ -17,13 +18,32 @@ p {
   font-family: montserrat;
 }
 
-.dropdown {
-  text-align: left;
-  position: relative;
-  display: inline;
-  height: 60px;
-  width: 100%;
+/* Flexbox fullscreen navbar */
+#Header {
+  width: 100vw;
+  height: auto;
+  margin: 0;
+  padding: 0;
   background-color: #ffdef6;
+}
+
+nav.navbar--fullscreen {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.navbar__link--fullscreen a {
+  text-decoration: none;
+  color: #230fa3;
+}
+
+/* dropdown modal nav */
+nav.navbar--mobile {
+  display: none;
 }
 
 .hamburger {
@@ -35,31 +55,27 @@ p {
   cursor: pointer;
 }
 
-.menu {
-  display: none;
-  position: absolute;
-  min-width: 150px;
+
+@media screen and (max-width: 968px) {
+  nav.navbar--fullscreen {
+    display: none !important;
+  }
+
+  nav.navbar--mobile {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  ul.navbar__menu {
+    list-style-type: none;
+    text-align: left;
+  }
 }
 
-
-.menuitems a {
-  text-decoration: none;
-  font-family: montserrat;
-  padding: 5px;
-  padding-bottom: 10px;
-  display: block;
-  color: #230fa3;
-}
-
-.dropdown:hover .menu {
-  display: block;
-  text-align: left;
-}
-
-.menuitems a:hover {
-  display: block;
-  background-color: #fce1f586;
-}
 
 header {
   text-align: center;
@@ -122,28 +138,6 @@ footer {
 }
 
 @media screen and (min-width: 1280px) {
-
-  .hamburger {
-    display: none;
-  }
-
-  .dropdown {
-    position: fixed;
-    width: 100%;
-    height: 60px;
-    background-color: #fce1f586;
-  }
-
-  .menu {
-    display: inline-block;    
-  }
-
-  .menuitems {
-    display: flex;
-    flex-direction: row;
-    padding-top: 15px;
-    padding-left: 30px;
-  }
 
   .graphic {
     display: inline;
