--- a/main.css
+++ b/main.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
@@ -17,13 +17,16 @@ p {
   font-family: montserrat;
 }
 
-.dropdown {
+.navbar{
   text-align: left;
   position: relative;
   display: inline;
   height: 60px;
   width: 100%;
-  background-color: #ffdef6;
+}
+
+.active {
+  display: block;
 }
 
 .hamburger {
@@ -36,13 +39,11 @@ p {
 }
 
 .menu {
+  list-style-type: none;
   display: none;
-  position: absolute;
-  min-width: 150px;
 }
 
-
-.menuitems a {
+.menu a {
   text-decoration: none;
   font-family: montserrat;
   padding: 5px;
@@ -51,22 +52,28 @@ p {
   color: #230fa3;
 }
 
-.dropdown:hover .menu {
-  display: block;
-  text-align: left;
+.menu li {
+  text-align: center;
+  margin: 15px auto;
 }
 
-.menuitems a:hover {
-  display: block;
-  background-color: #fce1f586;
+.nav-link {
+  text-decoration: none;
+  color: #230fa3;
 }
 
 header {
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .profilepic {
   height: 50vh;
+}
+
+.bio h1 {
+  text-align: center;
 }
 
 .graphic {
@@ -92,8 +99,22 @@ a {
   margin-bottom: 50px;
 }
 
+.example-image {
+  width: 80%;
+}
+
+form {
+  padding: 10px;
+}
+
+form input {
+  margin-bottom: 15px;
+  border: 1px solid #53b2f9;
+}
+
 footer img {
   height: 40px;
+  cursor: pointer;
 }
 
 footer {
@@ -119,6 +140,18 @@ footer {
     height: 35vw;
   }
 
+  .art p, .dance p {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  header h1 {
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 }
 
 @media screen and (min-width: 1280px) {
@@ -127,25 +160,29 @@ footer {
     display: none;
   }
 
-  .dropdown {
-    position: fixed;
-    width: 100%;
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 0;
+    margin-top: 0;
+    align-items: center;
     height: 60px;
     background-color: #fce1f586;
   }
 
   .menu {
-    display: inline-block;    
-  }
-
-  .menuitems {
     display: flex;
+    margin-right: 30px;
     flex-direction: row;
-    padding-top: 15px;
-    padding-left: 30px;
-  }
+    justify-content: flex-end;
+}
 
-  .graphic {
+.menu li {
+    margin: 0;
+    margin-left: 30px;
+}
+
+.graphic {
     display: inline;
     height: 25vw;
   }
@@ -161,12 +198,6 @@ footer {
   .profilepic {
     width: 25vw;
     height: 25vw;
-  }
-
-  header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
   }
 
   main {
@@ -191,6 +222,10 @@ footer {
     margin-right: auto;
   }
 
+  .art p, .dance p {
+    width: 60%;
+  }
+
   .example {
     display: inline-block;
     width: 25vw;
@@ -199,6 +234,14 @@ footer {
   .exampleimage {
     width: 20vw;
     height: 20vw;
+  }
+
+  .example-image {
+    width: 75%;
+  }
+
+  .web, .graphics {
+    padding: 25px;
   }
 
   footer {
